2007-07-18  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/Postscript.xml: Suppressed the insertion of page
	  accounting code into the PostScript data streamby adding a
	  "<nopageaccounting/>" tag into the "<execution>" section.

	* README: Documented the new "<nopageaccounting/>" tag to
	  suppress page accounting.

2007-07-11  Till Kamppeter <till.kamppeter@gmail.com>

	* README, configure.ac: Replaced "Gimp-Print" by "Gutenprint".

2007-06-25  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/foo2qpdl.xml, driver/foo2lava.xml,
	  printer/KONICA_MINOLTA-magicolor_2480_MF.xml,
	  printer/KONICA_MINOLTA-magicolor_2530_DL.xml,
	  printer/Samsung-CLP-300.xml, printer/Samsung-CLP-600.xml,
	  printer/Samsung-CLX-3160.xml, printer/Xerox-Phaser-6110.xml,
	  printer/Xerox-Phaser-6115MFP.xml: Updated database to reflect
	  the current state of the development of Rick Richardson's
	  "foo2..." printer driver series. There are more printers
	  supported by "foo2lava" now and the "foo2qpdl" driver was added.

2007-06-24  John Hosszu <john.hosszu@hp.com>

	* printer/: Added
          HP-Photosamrt_C4200.xml
          HP-Photosamrt_A320.xml
          HP-Photosamrt_A440.xml
          HP-LaserJet_P2010.xml
          HP-Photosmart_C5200.xml
          HP-910.xml
          HP-915.xml
          HP-Color_LaserJet_CM4730_MFP.xml
          HP-Color_LaserJet_CP3505.xml

        * db/source/PPD/HP
          HP-Color_LaserJet_CM4730_MFP.ppd
          HP-Color_LaserJet_CP3505.ppd

2007-06-18  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/gutenprint.xml: Updated to current stable 5.0.1 release of
	  Gutenprint.

2007-06-11  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/KONICA_MINOLTA-bizhub_1050eP.xml,
	  printer/KONICA_MINOLTA-bizhub_1050e.xml,
	  printer/KONICA_MINOLTA-bizhub_1050P.xml,
	  printer/KONICA_MINOLTA-bizhub_1050.xml,
	  printer/KONICA_MINOLTA-bizhub_360.xml,
	  printer/KONICA_MINOLTA-bizhub_420.xml,
	  printer/KONICA_MINOLTA-bizhub_500.xml,