@@ -1,0 +1,79 @@
+<printer id="printer/HP-PhotoSmart_A520">
+  <make>HP</make>
+  <model>PhotoSmart A520</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>4800</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>Refill: 1 CMY color cartridge</en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>www.hp.com</url>
+  <lang>
+    <pcl level="3"/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>A</functionality>
+  <driver>hpijs</driver>
+  <!--verified--><!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    This is a small (4 x 6 inch/10 x 15 cm/A6) printer especially for
+    printing photos taken with digital cameras. It has ports on the
+    side for inserting SmartMedia, CompactFlash, Memory Stick, and
+    Secure Digital &amp; MultiMedia digital &quot;film&quot; and has a
+    CGD panel that lets you select pictures from the &quot;film&quot;
+    to print, so one can use the device as a digital photo lab without
+    PC. In contrary to the P100 and P130 this device has a built-in
+    color CGD screen (as a digital camera) so you can choose the photos
+    easily without index print and without using the camera's screen
+    (DPOF facility).&lt;p&gt;
+
+    Due to the small paper size and not using black ink its usability
+    for PC documents is very limited, but it works with various PCL
+    drivers which support 3-ink CMY and A6/Postcard/4x6-Photo paper
+    size. Plus now a new 4x8" photo greeting card size. If the driver does not support such small paper formats the
+    upper left corner of the page is printed. The best quality you
+    will get with &quot;hpijs&quot; which supports this printer
+    explicitly since version 1.2&lt;p&gt;
+
+    When used with HP&apos;s &quot;hpijs&quot; driver, this printer
+    auto-detects the paper type and does appropriate dithering and
+    colour adjustment internally, controlled by the hardware. So even
+    when GhostScript with the &quot;hpijs&quot; driver only renders
+    the image with 300 or 600 dpi, higher resolutions are used for the
+    internal dithering. So if you insert photo paper, the printer will
+    print in its highest quality, no paper type choice in the
+    driver&apos;s options is needed. There is also a special high
+    resolution mode where the image is rendered in 1200 dpi and
+    interpolated to 4800x1200 dpi by the hardware, without paper
+    detection, intended for photo paper only.&lt;p&gt;
+
+    Border-less (full bleed) printing is supported with the
+    &quot;hpijs&quot; driver.&lt;p&gt;
+
+    For basic printing functionality use the &lt;a href=&quot;
+    http://hplip.sf.net/&quot;&gt;HPIJS driver &lt;/a&gt;. 
+    For advanced functionality such as printer status, maintenance 
+    features, and photo card unload use the &lt;a href=&quot;
+    http://hplip.sf.net/&quot;&gt;HPLIP driver&lt;/a&gt; 
+    (which includes HPIJS). &lt;p&gt;
+
+Also, an optional bluetooth dongle and battery pack is now available.&lt;p&gt;
+    </en>
+  </comments>
+</printer>
+
