@@ -1,3 +1,10 @@
+2007-08-08  John Hosszu <john.hosszu@hp.com>
+
+	* printer/: Added
+          HP-Photosamrt_A520.xml
+          HP-Photosamrt_A620.xml
+          HP-Photosamrt_A820.xml
+
 2007-07-18  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* driver/Postscript.xml: Suppressed the insertion of page
